2012-01-26 Riccardo Mottola <rm@gnu.org>

	* Application/UI/FSHeaderDock.m
	Warning fix: check delegate class.

2012-01-25 Riccardo Mottola <rm@gnu.org>

	* FSCore/FSObject.m
	* FSCore/FSObject.h
	Removed unused class

2012-01-25 Riccardo Mottola <rm@gnu.org>

	* Application/UI/FSTableView+Scrolling.m
	* Application/FSDocument+Quantrix.m
	* FSCore/FSSelection.m
	* FSCore/FSKeySet.m
	Warning fixes.

	* FSCore/FSObject.m
	Do not dealloc super.

	* Application/UI/FSVarioMatrix.m
	Initialize FSCell struct.

	* Application/UI/FSHeaderDock.m
	Check that dropimage is not nil, or its size struct is garbage.

2012-01-25 Riccardo Mottola <rm@gnu.org>

	* FSCore/FSObject.m
	* FSCore/FoundationExtentions.m
	Change imports for gcc 4.6 support